# SpaDiff

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  tutorial.ipynb
SpaDiff/: SpaDiff.py  simulation.py  utils.py
SpaDiff/kscore/kernels/: diagonal_imq.py
docs/: tuning_notes.md
examples/: minimal_demo.ipynb
examples/data/: crc_visium_demo.npz
spadiff/: __init__.py  utils.py  utils_dev.py
