[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spadiff"
version = "1.0.0"
description = "Mass-particle reverse denoising for spatial transcriptomics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jiazhang Cai", email = "caijiazhang1@gmail.com"},
]
keywords = [
    "spatial transcriptomics",
    "denoising",
    "diffusion",
    "Visium",
    "kernel density estimation",
    "single cell",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "notebook>=7.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/JiazhangCai/SpaDiff"
Repository = "https://github.com/JiazhangCai/SpaDiff"
Issues = "https://github.com/JiazhangCai/SpaDiff/issues"

[tool.setuptools]
packages = ["spadiff"]
